--- a/ZadanieASP1/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/ZadanieASP1/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -9,6 +9,12 @@
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="row">
     <div class="col-md-6">
+        @if (TempData["PasswordExpiredMessage"] != null)
+        {
+            <div class="alert alert-warning">
+                @TempData["PasswordExpiredMessage"]
+            </div>
+        }
         <form id="change-password-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
