--- a/ZadanieASP1/Views/Shared/_LoginPartial.cshtml
+++ b/ZadanieASP1/Views/Shared/_LoginPartial.cshtml
@@ -2,8 +2,8 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 
 @inject IViewLocalizer Localizer
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 <ul class="navbar-nav ml-auto">
     @if (SignInManager.IsSignedIn(User))
